--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev:server": "npx live-server --entry-file=src/comtab.html --browser=CHROME --watch=src --open=src",
     "build": "npx npm-run-all build:*",
     "build:js": "npx uglifyjs src/comtab.js -cmo dist/comtab.min.js --source-map \"filename='dist/comtab.min.js.map'\"",
-    "build:css": "npx csso src/comtab.css -o dist/comtab.min.css -s dist/comtab.min.css.map"
+    "build:css": "npx csso src/comtab.css -o dist/comtab.min.css -s dist/comtab.min.css.map",
+    "gzip": "npx npm-run-all gzip:*",
+    "gzip:js": "npx gzip dist/comtab.min.js",
+    "gzip:css": "npx gzip dist/comtab.min.css"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +19,7 @@
     "@types/jquery": "^3.5.5",
     "csso-cli": "^3.0.0",
     "cz-conventional-changelog": "^3.3.0",
+    "gzip-cli": "^1.2.0",
     "live-server": "^1.2.1",
     "npm-run-all": "^4.1.5",
     "uglify-js": "^3.12.7"
