build(lint-staged): test lint-staged

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     }
   },
   "lint-staged": {
-    "lib/**/*.{.ts,.tsx}": [
+    "lib/**/*.ts": [
       "prettier --write",
       "eslint --cache --fix",
       "git add"
