--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npx lint-staged"
+      "commit-msg": "npx lint-staged"
     }
   },
   "lint-staged": {
