--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "prepare": "husky install",
     "dev": "vite serve",
     "build": "vite build",
-    "serve": "vite build && vite preview"
+    "serve": "vite build && vite preview",
+    "gzip": "npm-run-all gzip:*",
+    "gzip:es": "npx gzip dist/comtab.es.js",
+    "gzip:umd": "npx gzip dist/comtab.umd.js"
   },
   "author": "",
   "license": "ISC",
